src/test/resources/failing/fail72.pnd
template Foo<A> {
    P(x) : int
    @type Animal
    @output A.Q
}
Foo<_> as F1
